Edited wiki page through web user interface.

--- a/wiki/Bitacora.wiki
+++ b/wiki/Bitacora.wiki
@@ -2,4 +2,4 @@
 
 = Bitácora =
 || *Fecha* || *Duración* || *Personas presentes * || *Dificultades afrontadas* || *Resultado obtenidos* ||
-|| 12-Ago-2008 || 1 hr || Adrian, Malto(Manuel), Fumanchu (persona presente espiritual) || No se encontraban convenciones de Erlang. Dificultades para elegir la licencia (nada grave) || Creación del proyecto en google code. Elección de la licencia que llevará el proyecto. Determinación del lenguaje (Erlang) y sus convenciones||
+|| 12-Ago-2008 || 1.5 hr || Adrian, Malto(Manuel), Mamachuy(persona presente espiritual, alma del equipo), Luna || No se encontraban convenciones de Erlang. Dificultades para elegir la licencia (nada grave) || Creación del proyecto en google code. Elección de la licencia que llevará el proyecto. Determinación del lenguaje (Erlang) y sus convenciones||
