Edited wiki page through web user interface.

--- a/wiki/Licencia.wiki
+++ b/wiki/Licencia.wiki
@@ -5,9 +5,9 @@
 
 Este proyecto esta bajo la licencia *BSD* (Berkeley Software Distribution).
 
-Esta licencia la escogimos porque nos convencieron sus características, principalmente nos agradó el hecho de que se reconozca a los autores del software y el que no se pueda usar los nombres  de éstos, para promoción del programa o una derivación de éste, sin antes tener una autorización.  Sentimos que esta característica es una protección para nosotros porque aunqe no impedimos que se pueda modificar el código o incluso gran parte del software pero si debemos de estar enterados de los nuevos proyectos y modificaciones que se estan realizando con nuestras ideas base, y en caso de no estar de acuerdo en alguna modificación, prohibir el uso de nuestros nombres.  Además de que nosotros no nos hacemos responsables de los daños o el mal uso que se pueda derivar de nuestro poryecto.
+Esta licencia la escogimos porque nos convencieron sus características, principalmente nos agradó el hecho de que se reconozca a los autores del software y el que no se pueda usar los nombres  de éstos, para promoción del programa o una derivación de éste, sin antes tener una autorización.  Sentimos que esta característica es una protección para nosotros porque aunque no impedimos que se pueda modificar el código o incluso gran parte del software pero si debemos de estar enterados de los nuevos proyectos y modificaciones que se están realizando con nuestras ideas base, y en caso de no estar de acuerdo en alguna modificación, prohibir el uso de nuestros nombres.  Además de que nosotros no nos hacemos responsables de los daños o el mal uso que se pueda derivar de nuestro proyecto.
 Así mismo  al ser una licencia de Software libre, esta permitida la redistribución tanto del codigo fuente como de los archivos binarios, aunque lo anterior no es obligatorio.
 
 Esto es  lo más importante porque con esto damos paso a que nuestros archivos sean una inspiración para realizar nuevos proyectos o incluso mejorar nuestras ideas y que se pueda hacer una aplicación más estable dejando que corrigan los errores y hagan mejoras a lo que creamos en un principio.
 
-Además esta licencia, al ser la ultima versión, es compatible con la GNU y esto la hace aún más flexible el proyecto, al poder ser integrado a otros proyectos que contengan dicha licencia.
+Además esta licencia, al ser la última versión, es compatible con la GNU y esto hace aún más flexible el proyecto, al poder ser integrado a otros proyectos que contengan dicha licencia.
