--- a/wiki/Bitacora.wiki
+++ b/wiki/Bitacora.wiki
@@ -6,3 +6,4 @@
 || 07-Sep-2008 || 1.5 hr || Adrian, Malto, Mamachuy, Luna y Mary || Problemas para reunirnos. Problemas para instalar eunit. || Reparto de trabajo para investigar y adelantar en lo que nos juntamos presencialmente, diseño de automatas.||
 || 08-Sep-2008 || 2.5 hrs || Adrian, Malto, Mamachuy y Mary || Discrepancia en el entendimiento del problema y de la solución del mismo. Surgimiento de dudas con respecto a los alcances del problema. || Creación de los autómatas para las history cards 1, 2 y 3. Implementación de los automatas para las history cards 2 y 3 ||
 || 10-Sep-2008 || 3 hrs || Adrian, Malto, Mamachuy, Luna y Mary || Estrés con respecto al tiempo de entrega de los autómatas  || Depuración de los diagramas y del codigo en general, simplificación de los automatas debido al nivel de complejidad. ||
+|| 11-Sep-2008 || 3 hrs || Adrian Mamachuy || En las pruebas de unidad no me salía algo lógico con excepciones || Modificacion de los automatas parser1 y lexer1 para que arrojaran excepciones y modificaciones en las preubas de unidad y makefile ||
