--- a/wiki/Bitacora.wiki
+++ b/wiki/Bitacora.wiki
@@ -5,6 +5,6 @@
 || 12-Ago-2008 || 1.5 hr || Adrian, Malto(Manuel), Mamachuy(persona presente espiritual, alma del equipo), Luna y Mary || No se encontraban convenciones de Erlang. Dificultades para elegir la licencia (nada grave) || Creación del proyecto en google code. Elección de la licencia que llevará el proyecto. Determinación del lenguaje (Erlang) y sus convenciones||
 || 07-Sep-2008 || 1.5 hr || Adrian, Malto, Mamachuy, Luna y Mary || Problemas para reunirnos. Problemas para instalar eunit. || Reparto de trabajo para investigar y adelantar en lo que nos juntamos presencialmente, diseño de automatas.||
 || 08-Sep-2008 || 2.5 hrs || Adrian, Malto, Mamachuy y Mary || Discrepancia en el entendimiento del problema y de la solución del mismo. Surgimiento de dudas con respecto a los alcances del problema. || Creación de los autómatas para las history cards 1, 2 y 3. Implementación de los automatas para las history cards 2 y 3 ||
-|| 10-Sep-2008 || 3 hrs || Adrian, Malto, Mamachuy, Luna y Mary || Estrés con respecto al tiempo de entrega de los autómatas  || Depuración de los diagramas y del codigo en general, simplificación de los automatas debido al nivel de complejidad. ||
-|| 11-Sep-2008 || 3 hrs || Adrian Mamachuy || En las pruebas de unidad no me salía algo lógico con excepciones || Modificacion de los automatas parser1 y lexer1 para que arrojaran excepciones y modificaciones en las preubas de unidad y makefile ||
-|| 11-Sep-2008 || 2 hrs || Adrian y Mary || Buscar horario para trabajar || Refactor de Lexer2N y sus test. Agregar la excepcion para una expresion erronea y modificar los casos de prueba donde se espera una excepcion.  ||
+|| 10-Sep-2008 || 3 hrs || Adrian, Malto, Mamachuy, Luna y Mary || Estrés con respecto al tiempo de entrega de los autómatas.  || Depuración de los diagramas y del codigo en general, simplificación de los automatas debido al nivel de complejidad. ||
+|| 11-Sep-2008 || 3 hrs || Adrian y Mamachuy || En las pruebas de unidad no me salía algo lógico con excepciones || Modificacion de los automatas parser1 y lexer1 para que arrojaran excepciones y modificaciones en las preubas de unidad y makefile ||
+|| 11-Sep-2008 || 2 hrs || Adrian, Mamachuy y Mary || Buscar horario para trabajar || Refactor de Lexer2N y sus test. Agregar la excepcion para una expresion erronea y modificar los casos de prueba donde se espera una excepcion.  ||
