--- a/wiki/Bitacora.wiki
+++ b/wiki/Bitacora.wiki
@@ -9,3 +9,4 @@
 || 11-Sep-2008 || 3 hrs || Adrian y Mamachuy || En las pruebas de unidad no me salía algo lógico con excepciones || Modificacion de los automatas parser1 y lexer1 para que arrojaran excepciones y modificaciones en las pruebas de unidad y makefile ||
 || 11-Sep-2008 || 2 hrs || Adrian, Mamachuy y Mary || Buscar horario para trabajar || Refactor de Lexer2N y sus test. Agregar la excepcion para una expresion erronea y modificar los casos de prueba donde se espera una excepcion.  ||
 || 12-Sep-2008 || 1 hrs || Adrian y Mamachuy || El manejo de los strings y las pruebas de lexer2N || Refactorización de lexer2N así como la documentación del proyecto. Anexe unos comentarios que puedan ser de utilidad.  ||
+|| 24-Sep-2008 || 1.5 hrs || Adrian, Luna, Mary, Malto y Mamachuy || Ninguna || Establecer convenciones, agregar signos: <,> y ! al lexer2N y definicion de la gramatica para expresiones aritmeticas  ||
