--- a/wiki/LenguajeyConvenciones.wiki
+++ b/wiki/LenguajeyConvenciones.wiki
@@ -41,26 +41,26 @@ Notación infija.
 
 ==Relacionales==
 
-'hola' < 'casa'
-'hola' == 'hola'
-'casa' != 'hola'
- 1 < 2
+'hola' < 'casa'.
+'hola' == 'hola'.
+'casa' != 'hola'.
+ 1 < 2.
 
 ==Logicas==
 
-3.2 or 5
+3.2 or 5.
 
 
-E -> E '+' T
-E -> E '-' T
-E -> T
-T -> T '*' F
-T -> T '/' F
-T -> T '%' F
-T -> F
-F -> '(' E ')'
-F -> '-' F
-F -> num
+E -> E '+' T.
+E -> E '-' T.
+E -> T.
+T -> T '*' F.
+T -> T '/' F.
+T -> T '%' F.
+T -> F.
+F -> '(' E ')'.
+F -> '-' F.
+F -> num.
 
 
 == Terminales ==
