Edited wiki page through web user interface.

--- a/wiki/LenguajeyConvenciones.wiki
+++ b/wiki/LenguajeyConvenciones.wiki
@@ -41,26 +41,38 @@ Notación infija.
 
 ==Relacionales==
 
-'hola' < 'casa'.
-'hola' == 'hola'.
-'casa' != 'hola'.
- 1 < 2.
+'hola' < 'casa'
+
+'hola' == 'hola'
+
+'casa' != 'hola'
+
+ 1 < 2
 
 ==Logicas==
 
-3.2 or 5.
+3.2 or 5
 
 
-E -> E '+' T.
-E -> E '-' T.
-E -> T.
-T -> T '*' F.
-T -> T '/' F.
-T -> T '%' F.
-T -> F.
-F -> '(' E ')'.
-F -> '-' F.
-F -> num.
+E -> E '+' T
+
+E -> E '-' T
+
+E -> T
+
+T -> T '*' F
+
+T -> T '/' F
+
+T -> T '%' F
+
+T -> F
+
+F -> '(' E ')'
+
+F -> '-' F
+
+F -> num
 
 
 == Terminales ==
@@ -69,12 +81,20 @@ F -> num.
 
 
 E -> T > T
+
 E -> T < T
+
 E -> T == T
+
 E -> T != T
+
 E -> T >= T
+
 E -> T =< T
+
 T -> '(' E ')'
+
 T -> indicador
+
 T -> numero
 T -> string
