--- a/wiki/Bitacora.wiki
+++ b/wiki/Bitacora.wiki
@@ -10,3 +10,4 @@
 || 11-Sep-2008 || 2 hrs || Adrian, Mamachuy y Mary || Buscar horario para trabajar || Refactor de Lexer2N y sus test. Agregar la excepcion para una expresion erronea y modificar los casos de prueba donde se espera una excepcion.  ||
 || 12-Sep-2008 || 1 hrs || Adrian y Mamachuy || El manejo de los strings y las pruebas de lexer2N || Refactorización de lexer2N así como la documentación del proyecto. Anexe unos comentarios que puedan ser de utilidad.  ||
 || 24-Sep-2008 || 1.5 hrs || Adrian, Luna, Mary, Malto y Mamachuy || Ninguna || Establecer convenciones, agregar signos: <,> y ! al lexer2N y definicion de la gramatica para expresiones aritmeticas  ||
+|| 01-Oct-2008 || 3 hrs || Adrian, Luna, Mary, Malto y Mamachuy || Ninguna =) || Cambio de signo ! por / en el lexer2N. Se agrego a la gramatica(en papel) expresiones relacionales y logicas. Comienzo de implementacion de la tarjeta 4 parser1 llamara a lexer1 y lexer1  llamara a lexer2. ||
