Edited wiki page through web user interface.

--- a/wiki/Bitacora.wiki
+++ b/wiki/Bitacora.wiki
@@ -13,3 +13,4 @@
 || 01-Oct-2008 || 3 hrs || Adrian, Luna, Mary, Malto y Mamachuy || Ninguna =) || Cambio de signo ! por / en el lexer2N. Se agrego a la gramatica(en papel) expresiones relacionales y logicas. Comienzo de implementacion de la tarjeta 4 parser1 llamara a lexer1 y lexer1  llamara a lexer2. ||
 || 03-Oct-2008 || 1 hr || Adrian y Mamachuy || Al convertir Strings, numbers y floats || Se creo una clase que una parser1, lexer1 y lexer2, que además le da formato a las tuplas para mandarlas a yecc||
 || 03-Oct-2008 || 2 hrs || Luna, Mary, Malto y Mamachuy || En los test del parser(yecc) ||  Se creo la gramatica con yecc y se resolvieron los problemas con strings, float e integers ||
+|| 05-Oct-2008 || 4.5 hrs || Adrian, Mary, Malto y Mamachuy ||Integracion de los lexers, agregar funcionalidad al parser ||  Elaboracion del lexer3 que hace lo necesario para que el parser tenga su entrada correspondiente, agregar funcionalidad al parser, integracion de los lexers e implementacion del evaluador de expresiones||
