--- a/wiki/Bitacora.wiki
+++ b/wiki/Bitacora.wiki
@@ -17,3 +17,4 @@
 || 06-Oct-2008 || 1 hrs || Adrian, Mary, Malto, Mamachuy y Luna || Salio un caso no considerado  || Se corrigió el caso y se añadió la clase peval para que regresara el resultado en un string||
 || 08-Oct-2008 || .5 hrs || Adrian, y Mamachuy || Se nos olvido agregar el test de peval.erl || Elaboración de la prueba de unidad, test_peval.erl ||
 || 12-Oct-2008 || 5 hrs || Luna, Adrian, Malto, Mary y Mamachuy ||  Activar los puertos || Elaboración del Servidor Web y su archivo de Configuración. ||
+|| 15-Oct-2008 || 2.5 hrs || Luna, Adrian, Malto, Mary y Mamachuy ||  - || Corregir detalles. Hacer un cliente para el servidor y ayude en las pruebas. Incluir metodo POST al servidor y mandar error 405 si no es un metodo valido (GET o POST). ||
