Edited wiki page through web user interface.

--- a/wiki/InstalacionenWindows.wiki
+++ b/wiki/InstalacionenWindows.wiki
@@ -1,7 +1,7 @@
 #labels instalacion,windows
 # Instalación del Framework en el sistema operativo Windows
 
-== Instalación en Linux ==
+== Instalación en Windows==
 
 Este documento describe la instalación del framework erl-flush en un sistema operativo Windows. 
 
