--- a/wiki/GramaticadeLenguajedePlantillas.wiki
+++ b/wiki/GramaticadeLenguajedePlantillas.wiki
@@ -16,7 +16,8 @@ Erl-Flush tiene tres diferentes tipos de operadores para poder realizar las tare
                     {{{
                     {{ variablemuylarga + 2 }} 
                     }}}
-              * El valor de una variable que no fue correctamente definida es _*false*_.
+               _*Supondiendo que "variablemuylarga = 2" el resultado de este codigo será 4 *_
+              * *NOTA:*_El valor de una variable que no fue correctamente definida es_ _*false*_.
 
      * '{%%}' Ciclos y Condiciones ->
               * Se utilizan para poder realizar una iteración a lo largo de una lista o un diccionario. Ej.                  
@@ -31,4 +32,4 @@ Erl-Flush tiene tres diferentes tipos de operadores para poder realizar las tare
                         {{i}}
                     {%endfor%}
                     }}}
-                    _*Suponiendo que "lista = [1,2,3]", este codigo recorerá la lista imprimiendo cada valor en ella, es decir 1 2 3*_
+                    _*Suponiendo que "lista = [1,2,3]", este codigo recorerá la lista imprimiendo cada valor en ella, es decir 1 2 3*_co
