--- a/wiki/Bitacora.wiki
+++ b/wiki/Bitacora.wiki
@@ -27,3 +27,12 @@
 || 30-Oct-2008 || 2 hrs ||  Adrian y Mamachuy  || -  || Separar el controller||
 || 09-Nov-2008 || 5 hrs ||  Luna, Adrian, Malto, Mary y Mamachuy  || -  || Trabajo sobre las tarjetas 16 y 17, creacion de lexer4, eval_if. ||
 || 12-Nov-2008 || 2.5 hrs ||  Mary, Luna, Malto y Mamachuy  || -  || eval_for.||
+|| 19-Nov-2008 || 3 hrs ||  Mary, Luna, Malto y Mamachuy  || Falta de tiempo  || Corregir detalles para pasar prueba del cliente.||
+|| 26-Nov-2008 || 2.5 hrs ||  Mary, Luna, Malto y Mamachuy  || -  || Diseño de la aplicacion y busqueda de tareas necesarias para estar listos para la presentacion final.||
+|| 28-Nov-2008 || 2 hrs ||  Mary, Luna, Malto y Mamachuy  || -  || Esquelto de la aplicacion y edicion video.||
+|| 28-Nov-2008 || 2 hrs ||  Mary, Luna, Malto y Mamachuy  || Periodo de examenes finales   || Esquelto de la aplicacion y edicion video.||
+|| 30-Nov-2008 || 10 hrs ||  Mary, Luna, Malto y Mamachuy  || Periodo de examenes finales   || Detalles finales, edicion video, vistas y controladores de la aplicacion, corregir errores de la base de datos, turorial y aportaciones a la documentacion.||
+|| 1-Dic-2008 || 2 hrs ||  Mary, Luna, Malto y Mamachuy  || Periodo de examenes finales  || Detalles finales y edicion video.||
+
+
+
