Edited wiki page through web user interface.

--- a/wiki/HistoryCards.wiki
+++ b/wiki/HistoryCards.wiki
@@ -9,8 +9,7 @@ P1->Prioridad Normal P2->Prioridad Baja_
 || 1 || Eliminación de Comentarios || El lenguaje de platillas soporta comentarios adecuadamente delimitados. Estos son ignorados por los lexers. || P0 ||
 || 2 || Lexer de primer nivel. || El analizador léxico(lexer) de primer nivel separa el código de HTML del código del lenguaje de plantillas. || P0 ||
 || 3 || Lexer de segundo nivel || El analizador léxico(lexer) de segundo nivel separa todos los tokens(elementos léxicos) del lenguaje de platillas y los clasifica en: enteros, flotantes, cadena de caracteres, identificadores y símbolos especiales. || P0 ||
-|| 4 || Las expresiones en el lenguaje de plantillas son evaluadas para producir un 
-resultado que se despliega como parte de la salida junto con el código estático. Las expresiones pueden incluir literales y variables de sólo lectura (establecidas desde una lista de asociación).|| P0 ||
+|| 4 || Las expresiones en el lenguaje de plantillas son evaluadas para producir un resultado que se despliega como parte de la salida junto con el código estático. Las expresiones pueden incluir literales y variables de sólo lectura (establecidas desde una lista de asociación).|| P0 ||
 || 5 || Las expresiones aritméticas en el lenguaje de plantillas incluyen los siguientes operadores con una precedencia y asociatividad bien definida: suma, resta, multiplicación, división, residuo.|| P0 ||
 || 6 || Las expresiones relacionales en el lenguaje de plantillas incluyen los siguientes operadores con una precedencia y asociatividad bien definida: igual, diferente, menor,menor o igual,mayor, mayor o igual.||P0 ||
 || 7 || Las expresiones lógicas en el lenguaje de plantillas incluyen los siguientes operadores con una precedencia y asociatividad bien definida: and, or, xor, not.||P0 ||
@@ -24,7 +23,5 @@ resultado que se despliega como parte de la salida junto con el código estátic
 || 15 || Los controladores reciben una lista de asociación con los encabezados de la petición. Así mismo, el controlador puede indicar los encabezados de una respuesta.||P0 ||
 || 16 ||El lenguaje de plantillas incluye un mecanismo para incluir o no ciertos elementos condicionales.||P0 ||
 || 17 || El lenguaje de plantillas tiene un mecanismo para iterar facilmente sobre todos los elementos contenidos en una lista o diccionario.||P0 ||
-
-
 
 
